--- a/templates/output.html
+++ b/templates/output.html
@@ -36,7 +36,7 @@
         left: 45%;
         ;
     }
-    
+
 
 </style>
 <body>
@@ -50,14 +50,23 @@
         // const word = "Hello"
         // const str = (query.getAttribute('data-value'));
         // str.replace(new RegExp(word, "gi"), (match) => `<mark>${match}</mark>`);
-        const query = document.getElementById('res');
-        const str = (query.getAttribute('data-value'));
-        const word = (query.getAttribute('data-q'));
-        var n = str.includes(word);
-        if(n){
-            let result = str.replace(new RegExp(word, "gi"), (match) => `<mark>${match}</mark>`);
-            document.getElementById('demo').innerHTML = result;
+        /*var elms = document.querySelectorAll("[id='duplicateID']");
+
+        for(var i = 0; i < elms.length; i++)
+            elms[i].style.display='none';*/
+        const query = document.querySelectorAll("[id='res']");
+        for(var i = 0; i < query.length; i++) {
+            const str = (query[i].getAttribute('data-value'));
+            const word = (query[i].getAttribute('data-q'));
+            console.log(str + " " + word)
+            var n = str.includes(word);
+            if (n) {
+                let result = str.replace(new RegExp(word, "gi"),
+                                         (match) => `<mark>${match}</mark>`);
+                query[i].innerHTML = result;
+                console.log("entered inner")
             }
+        }
 
     }
 
@@ -71,6 +80,31 @@
 <!--    {% endfor %}</p>-->
 
 
+<div class="container">
+    <div class="row">
+        <ol>
+
+            {% for movie,script in name.items() %}
+            <li>
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">{{movie}}</span>
+                        {% for s in script %}
+                        <p data-value="{{s}}" id="res" data-q="{{q}}" onmousemove="highlight()">{{s}}</p>
+                        {% endfor %}
+                    </div>
+                </div>
+            </li>
+            {% endfor %}
+        </ol>
+<!--        <button onclick="highlight()">Highlight!</button>-->
+
+    </div>
+</div>
+
+<br>
+<br>
+
 <!--<div class="container">-->
 <!--    <div class="row">-->
 <!--        <ol>-->
@@ -81,8 +115,7 @@
 <!--                    <div class="card-content white-text">-->
 <!--                        <span class="card-title">{{movie}}</span>-->
 <!--                        {% for s in script %}-->
-<!--                        <p data-value="{{s}}" id="res" data-q="{{q}}" onmouseenter="highlight()">yo</p>-->
-<!--                        <p id="demo"></p>-->
+<!--                        {{s}}-->
 <!--                        {% endfor %}-->
 <!--                    </div>-->
 <!--                </div>-->
@@ -94,29 +127,6 @@
 
 <!--<br>-->
 <!--<br>-->
-<div class="container">
-    <div class="row">
-        <ol>
-
-            {% for movie,script in name.items() %}
-            <li>
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">{{movie}}</span>
-                        {% for s in script %}
-                        <h6>{{s}}</h6>
-<!--                        <p data-value="{{s}}" id="res" data-q="{{q}}" onmouseenter="highlight()">{{s}}</p>-->
-                        {% endfor %}
-                    </div>
-                </div>
-            </li>
-            {% endfor %}
-        </ol>
-    </div>
-</div>
-
-<br>
-<br>
 
 
 
