--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,8 @@
     <title>Search Query</title>
 </head>
 <style>
-    body {background-color: darkseagreen;}
+    /*body {background-color: darkseagreen;*/
+    body {background-image : url('/static/img/gradient_green.png')}
     p {color: ghostwhite;font-family: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', monospace}
     input[type=submit] {background-color: #4CAF50;
         border: none;
@@ -17,16 +18,17 @@
 
     input[type=submit]:hover {background-color: darkgreen}
     .search-elements {text-align: center; position: absolute;
-        top:  35%;
-        left: 50%;
+        top:  50%;
+        left: 53%;
         transform: translate(-50%,-50%);}
 
-    h2 {position: absolute;
-        top:  10%;
-        left: 50%;
+    h1 {position: absolute;
+        top:  20%;
+        left: 53%;
         transform: translate(-50%,-50%);
         color: ghostwhite;
         font-family: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', monospace;
+        white-space: nowrap;
         }
 
     textarea {
@@ -34,9 +36,17 @@
         height: 100px;
     }
 
+    body {
+        height:100%;
+        background-position: center;
+        background-repeat: initial;
+        background-size: cover;
+    }
+
 </style>
+<!--<body background="/images/gradient_green.png">-->
 <body>
-<h2> Search through your Text Conversations </h2>
+<h1> Search through your Text Conversations </h1>
 <div class = "search-elements">
 
 <form action="/success" method="post" enctype="multipart/form-data">
